--- a/content/templates/content/blocks.html
+++ b/content/templates/content/blocks.html
@@ -11,7 +11,7 @@
         </section>
     {% else %}
         <section class="block-{{ block.block_type }}">
-            {{ block }}
+            {% include_block block with block_id=forloop.counter %}
         </section>
     {% endif %}
 {% endfor %}
